Fix: Missing border for departures (#545)
* Update search.module.css

* Update assistant.module.css

* chore: Change texts

* Update departures.module.css

* Update departures.ts

--- a/src/page-modules/assistant/assistant.module.css
+++ b/src/page-modules/assistant/assistant.module.css
@@ -46,6 +46,10 @@
   background-color: token('color.background.neutral.0.background');
 }
 
+.searchSection > div {
+  border: none;
+}
+
 .input {
   display: flex;
   flex-direction: column;
