--- a/src/page-modules/departures/departures.module.css
+++ b/src/page-modules/departures/departures.module.css
@@ -59,6 +59,7 @@
   position: absolute;
   left: 0;
   right: 0;
+  background-color: token('color.background.neutral.0.background');
 }
 
 @media (max-width: 600px) {
